# fractalrust

./: .gitignore  Cargo.toml  LICENSE  config.example.json  readme.md
src/: app.rs  config.rs  fractal.rs  lib.rs  main.rs  renderer.rs  ui.rs
tests/: integration_tests.rs
